tests/error/poly_errors_py312/non_copyable2.py
from guppylang import qubit
from guppylang.decorator import guppy


@guppy.struct
class MyStruct[Q: qubit]:
    pass


MyStruct.compile()
